# PixelCNN

./: Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/dataset/: celeba.yaml  cifar10.yaml  mnist.yaml
configs/model/: celeba_pixelcnn.yaml  mnist_pixelcnn.yaml
src/: convert_checkpoint.py  generate.py  pl.py  train.py
src/datasets/: __init__.py  celeba.py  cifar10.py  mnist.py
src/pixelcnn/: infer.py  model.py
